--- a/styles/sass/variables.scss
+++ b/styles/sass/variables.scss
@@ -30,6 +30,7 @@ $timeline-fractional-label-displacement: 5px;
 $timeline-hundreds-label-displacement: 6px;
 
 $tick-width: 1px;
+$tick-height: 6px;
 
 // minimap intro scale positioning
 $minimap-intro-multicellular: 143px;
